UI update: Added hover effects and background changesa

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </div>
   </nav>
 
-  <!-- Latest News -->
+  <!-- Latest News + Achievements -->
   <section class="container my-4 bg-light p-4 rounded shadow-sm">
-    <div class="row">
+    <div class="row g-4">
 
-      <!-- Latest News (col-6) -->
-      <div class="col-md-6">
+      <!-- Latest News -->
+      <div class="col-12 col-md-6">
         <h3 id="latest-news-title">Latest News</h3>
         <div class="news-marquee">
           <ul id="news-list"></ul>
@@ -37,20 +37,19 @@
         </div>
       </div>
 
-      <!-- Achievements (col-6) -->
-      <div class="col-md-6">
-        <h3 class="text-center mb-3" id ="achivement-section">Achievements</h3>
+      <!-- Achievements -->
+      <div class="col-12 col-md-6">
+        <h3 class="text-center mb-3" id="achivement-section">Achievements</h3>
         <div class="achievements-slider">
-          
           <div id="achievementsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
 
             <div class="carousel-inner">
               <div class="carousel-item active text-center">
-                <img src="assets/img/achievements/Census-logo.png" alt="Award for Excellence">
+                <img src="assets/img/achievements/Census-logo.png" alt="Award for Excellence" class="img-fluid rounded">
                 <p class="mt-2 fw-semibold">Award for Excellence</p>
               </div>
               <div class="carousel-item text-center">
-                <img src="assets/img/achievements/news1.jpg" alt="ISO Certification">
+                <img src="assets/img/achievements/news1.jpg" alt="ISO Certification" class="img-fluid rounded">
                 <p class="mt-2 fw-semibold">ISO Certification</p>
               </div>
             </div>
@@ -58,12 +57,12 @@
             <!-- Controls -->
             <button class="carousel-control-prev" type="button" data-bs-target="#achievementsCarousel"
               data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="carousel-control-prev-icon"></span>
               <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#achievementsCarousel"
               data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="carousel-control-next-icon"></span>
               <span class="visually-hidden">Next</span>
             </button>
           </div>
@@ -73,11 +72,11 @@
     </div>
   </section>
 
-
   <!-- Supporting Documents -->
   <section class="container my-4">
     <h3 id="supporting-docs-title">Supporting Documents</h3>
 
+    <!-- Circulars -->
     <section id="circulars-section" class="my-4">
       <h3 id="circulars-title">Circulars</h3>
       <ul id="circulars-list" class="list-group mb-3"></ul>
@@ -91,6 +90,7 @@
       </div>
     </section>
 
+    <!-- Manuals -->
     <section id="manuals-section" class="my-4">
       <h5 id="manuals-title">Manuals</h5>
       <ul id="manuals-list" class="list-group mb-3"></ul>
