--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
     </div>
   </nav>
 
-  <!-- Latest News + Achievements -->
+  <!-- Latest News -->
   <section class="container my-4 bg-light p-4 rounded shadow-sm">
     <div class="row g-4">
-
-      <!-- Latest News -->
-      <div class="col-12 col-md-6">
+      <div class="col-12">
         <h3 id="latest-news-title">Latest News</h3>
         <div class="news-marquee">
           <ul id="news-list"></ul>
@@ -36,40 +34,34 @@
           </button>
         </div>
       </div>
-
-      <!-- Achievements -->
-      <div class="col-12 col-md-6">
-        <h3 class="text-center mb-3" id="achivement-section">Achievements</h3>
-        <div class="achievements-slider">
-          <div id="achievementsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
-            <div class="carousel-inner">
-              <div class="carousel-item active text-center">
-                <img src="assets/img/achievements/Census-logo.png" alt="Award for Excellence" class="img-fluid rounded">
-                <p class="mt-2 fw-semibold">Award for Excellence</p>
-              </div>
-              <div class="carousel-item text-center">
-                <img src="assets/img/achievements/news1.jpg" alt="ISO Certification" class="img-fluid rounded">
-                <p class="mt-2 fw-semibold">ISO Certification</p>
-              </div>
-            </div>
-
-            <!-- Controls -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#achievementsCarousel"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#achievementsCarousel"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
-      </div>
-
     </div>
   </section>
+
+  <!-- Achievements (new full-width row) -->
+<section class="container my-4 bg-light p-4 rounded shadow-sm">
+  <h3 class="text-center mb-4" id="achievement-section">Achievements</h3>
+
+  <div id="achievementsCarousel" class="carousel slide" data-bs-ride="carousel">
+    <!-- Indicators -->
+    <div class="carousel-indicators" id="carousel-indicators"></div>
+
+    <!-- Slides -->
+    <div class="carousel-inner" id="carousel-inner"></div>
+
+    <!-- Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#achievementsCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#achievementsCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</section>
+
+
+
 
   <!-- Supporting Documents -->
   <section class="container my-4">
