--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </section>
 
   <!-- Latest News -->
-  <section class="container my-4 bg-light p-4 rounded shadow-sm">
+  <section class="container my-4 bg-light p-4 shadow-sm">
     <div class="row g-4">
       <div class="col-12">
         <h3 id="latest-news-title">Latest News</h3>
@@ -72,7 +72,7 @@
   </section>
 
   <!-- Achievements -->
-  <section class="container my-4 bg-light p-4 rounded shadow-sm">
+  <section class="container my-4 bg-light p-4  shadow-sm">
     <h3 class="text-center mb-4" id="achievement-section">Achievements</h3>
 
     <div id="achievementsCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -89,19 +89,20 @@
       </button>
     </div>
   </section>
-
-  <!-- Supporting Documents -->
-  <section class="container my-4">
-    <h3 id="supporting-docs-title">Supporting Documents</h3>
+   <h3 id="supporting-docs-title" class="my-4 container  bg-dark p-4  shadow-sm text-center text-white">Supporting Documents</h3>
 
     <!-- Circulars -->
-    <section id="circulars-section" class="my-4">
+    <section id="circulars-section " class="my-4 container   p-4  shadow-sm">
+      
+  <!-- Supporting Documents -->
+  
+ 
       <h3 id="circulars-title">Circulars</h3>
       <ul id="circulars-list" class="list-group mb-3"></ul>
 
       <div id="pdf-viewer" class="pdf-viewer border rounded p-2 position-relative">
         <div id="pdf-placeholder"
-          class="pdf-placeholder text-center w-100 h-100 d-flex align-items-center justify-content-center">
+          class="pdf-placeholder text-center w-100 h-100 d-flex align-items-center justify-content-center text-white">
           Click on a document to view PDF
         </div>
         <iframe id="pdf-frame" width="100%" height="500px" style="display:none;" frameborder="0"></iframe>
@@ -109,23 +110,40 @@
     </section>
 
     <!-- Manuals -->
-    <section id="manuals-section" class="my-4">
+    <section id="manuals-section " class="my-4 container  p-4  shadow-sm">
       <h3 id="manuals-title">Manuals</h3>
       <ul id="manuals-list" class="list-group mb-3"></ul>
     </section>
 
     <!-- Tutorials -->
-    <section id="tutorials-section" class="my-4 text-center">
-      <h3 id="tutorials-title">Tutorials</h3>
+  
+      <h3 id="tutorials-title" class="my-4  text-white shadow-sm text-center">Tutorials</h3>
       <div id="tutorials-list"></div>
-    </section>
+
+
+<!-- Map of UP -->
+<section class="container my-4 bg-light p-4 shadow-sm text-center">
+  <h3 class="mb-4">Map of Uttar Pradesh</h3>
+  <div class="ratio ratio-16x9">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3600924.2984102037!2d78.20945780190777!3d26.846693943215388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398c4cb1486cc6b5%3A0x6f9f24e0297e4a64!2sUttar%20Pradesh%2C%20India!5e0!3m2!1sen!2sus!4v1695050062730!5m2!1sen!2sus"
+      style="border:0;"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+      title="Map of Uttar Pradesh"
+    ></iframe>
+  </div>
+</section>
+
+
 
     <!-- Social Media -->
-    <section id="social-media" class="my-4 text-center">
-      <h3 id="follow-us-title">Follow Us</h3>
+    
+      <h3 id="follow-us-title" class="my-4  text-white shadow-sm text-center">Follow Us</h3>
       <div id="social-links" class="d-flex justify-content-center gap-4"></div>
-    </section>
-  </section>
+
+  
 
   <!-- Footer -->
   <footer class="bg-dark text-light text-center p-3 mt-5">
