--- a/index.html
+++ b/index.html
@@ -121,27 +121,32 @@
       <div id="tutorials-list"></div>
 
 
-<!-- Map of UP -->
+<!-- Map: Directorate of Census Operations UP, Aliganj, Lucknow -->
 <section class="container my-4 bg-light p-4 shadow-sm text-center">
-  <h3 class="mb-4">Map of Uttar Pradesh</h3>
-  <div class="ratio ratio-16x9">
+  <h3 class="mb-4">Directorate of Census Operations, Aliganj, Lucknow</h3>
+  <div class="map-responsive">
     <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3600924.2984102037!2d78.20945780190777!3d26.846693943215388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398c4cb1486cc6b5%3A0x6f9f24e0297e4a64!2sUttar%20Pradesh%2C%20India!5e0!3m2!1sen!2sus!4v1695050062730!5m2!1sen!2sus"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3568.8728923964814!2d80.95030911511224!3d26.892389699303865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399957ce23110213%3A0x92b60136bf931331!2sDirectorate%20of%20Census%20Operations%20UP%2C%20Lucknow!5e0!3m2!1sen!2sin!4v1695056000000!5m2!1sen!2sin"
+      width="100%"
+      height="500"
       style="border:0;"
       allowfullscreen=""
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"
-      title="Map of Uttar Pradesh"
+      title="Directorate of Census Operations, Lucknow"
     ></iframe>
   </div>
 </section>
 
 
 
-    <!-- Social Media -->
-    
-      <h3 id="follow-us-title" class="my-4  text-white shadow-sm text-center">Follow Us</h3>
-      <div id="social-links" class="d-flex justify-content-center gap-4"></div>
+
+
+<div id="social-bar">
+  <a href="https://www.facebook.com/share/1Axcim15d8/" class="social-icon facebook"><i class="bi bi-facebook"></i></a>
+  <a href="https://www.instagram.com/dco__up?igsh=MW9tMHpyd21najM3aA/" class="social-icon instagram"><i class="bi bi-instagram"></i></a>
+  <a href="https://x.com/DCO_UP/" class="social-icon twitter"><i class="bi bi-twitter-x"></i></a>
+</div>
 
   
 
