--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </section>
 
   <!-- Latest News -->
-  <section class="container my-4 bg-light p-4 shadow-sm">
+  <section class="container my-4  p-4 shadow-sm">
     <div class="row g-4">
       <div class="col-12">
         <h3 id="latest-news-title">Latest News</h3>
@@ -62,7 +62,7 @@
           <ul id="news-list"></ul>
         </div>
         <div class="text-end mt-2">
-          <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#allNewsModal"
+          <button class="btn btn-dark btn-sm" data-bs-toggle="modal" data-bs-target="#allNewsModal"
             id="view-all-btn">
             View All
           </button>
@@ -72,7 +72,7 @@
   </section>
 
   <!-- Achievements -->
-  <section class="container my-4 bg-light p-4  shadow-sm">
+  <section class="container my-4  p-4  shadow-sm">
     <h3 class="text-center mb-4" id="achievement-section">Achievements</h3>
 
     <div id="achievementsCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -89,66 +89,56 @@
       </button>
     </div>
   </section>
-   <h3 id="supporting-docs-title" class="my-4 container  bg-dark p-4  shadow-sm text-center text-white">Supporting Documents</h3>
+  <h3 id="supporting-docs-title" class="my-4 container  bg-dark p-4  shadow-sm text-center text-white">Supporting
+    Documents</h3>
 
-    <!-- Circulars -->
-    <section id="circulars-section " class="my-4 container   p-4  shadow-sm">
-      
-  <!-- Supporting Documents -->
-  
- 
-      <h3 id="circulars-title">Circulars</h3>
-      <ul id="circulars-list" class="list-group mb-3"></ul>
+  <!-- Circulars -->
+  <section id="circulars-section " class="my-4 container   p-4  shadow-sm">
 
-      <div id="pdf-viewer" class="pdf-viewer border rounded p-2 position-relative">
-        <div id="pdf-placeholder"
-          class="pdf-placeholder text-center w-100 h-100 d-flex align-items-center justify-content-center text-white">
-          Click on a document to view PDF
-        </div>
-        <iframe id="pdf-frame" width="100%" height="500px" style="display:none;" frameborder="0"></iframe>
-      </div>
-    </section>
-
-    <!-- Manuals -->
-    <section id="manuals-section " class="my-4 container  p-4  shadow-sm">
-      <h3 id="manuals-title">Manuals</h3>
-      <ul id="manuals-list" class="list-group mb-3"></ul>
-    </section>
-
-    <!-- Tutorials -->
-  
-      <h3 id="tutorials-title" class="my-4  text-white shadow-sm text-center">Tutorials</h3>
-      <div id="tutorials-list"></div>
+    <!-- Supporting Documents -->
 
 
-<!-- Map: Directorate of Census Operations UP, Aliganj, Lucknow -->
-<section class="container my-4 bg-light p-4 shadow-sm text-center">
-  <h3 class="mb-4">Directorate of Census Operations, Aliganj, Lucknow</h3>
-  <div class="map-responsive">
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3568.8728923964814!2d80.95030911511224!3d26.892389699303865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399957ce23110213%3A0x92b60136bf931331!2sDirectorate%20of%20Census%20Operations%20UP%2C%20Lucknow!5e0!3m2!1sen!2sin!4v1695056000000!5m2!1sen!2sin"
-      width="100%"
-      height="500"
-      style="border:0;"
-      allowfullscreen=""
-      loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"
-      title="Directorate of Census Operations, Lucknow"
-    ></iframe>
+    <h3 id="circulars-title">Circulars</h3>
+    <ul id="circulars-list" class="list-group mb-3"></ul>
+
+
+  </section>
+
+  <!-- Manuals -->
+  <section id="manuals-section " class="my-4 container  p-4  shadow-sm">
+    <h3 id="manuals-title">Manuals</h3>
+    <ul id="manuals-list" class="list-group mb-3"></ul>
+  </section>
+
+  <!-- Tutorials -->
+  <h3 id="tutorials-title" class="my-4 container  bg-dark p-4  shadow-sm text-center text-white">Tutorials</h3>
+
+  <div id="tutorials-list"></div>
+
+
+  <!-- Map: Directorate of Census Operations UP, Aliganj, Lucknow -->
+  <section class="container my-4 p-4 shadow-sm text-center">
+    <h3 class="mb-4">Directorate of Census Operations, Aliganj, Lucknow</h3>
+    <div class="map-responsive">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3568.8728923964814!2d80.95030911511224!3d26.892389699303865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399957ce23110213%3A0x92b60136bf931331!2sDirectorate%20of%20Census%20Operations%20UP%2C%20Lucknow!5e0!3m2!1sen!2sin!4v1695056000000!5m2!1sen!2sin"
+        width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade" title="Directorate of Census Operations, Lucknow"></iframe>
+    </div>
+  </section>
+
+
+
+
+
+  <div id="social-bar">
+    <a href="https://www.facebook.com/share/1Axcim15d8/" class="social-icon facebook"><i class="bi bi-facebook"></i></a>
+    <a href="https://www.instagram.com/dco__up?igsh=MW9tMHpyd21najM3aA/" class="social-icon instagram"><i
+        class="bi bi-instagram"></i></a>
+    <a href="https://x.com/DCO_UP/" class="social-icon twitter"><i class="bi bi-twitter-x"></i></a>
   </div>
-</section>
 
 
-
-
-
-<div id="social-bar">
-  <a href="https://www.facebook.com/share/1Axcim15d8/" class="social-icon facebook"><i class="bi bi-facebook"></i></a>
-  <a href="https://www.instagram.com/dco__up?igsh=MW9tMHpyd21najM3aA/" class="social-icon instagram"><i class="bi bi-instagram"></i></a>
-  <a href="https://x.com/DCO_UP/" class="social-icon twitter"><i class="bi bi-twitter-x"></i></a>
-</div>
-
-  
 
   <!-- Footer -->
   <footer class="bg-dark text-light text-center p-3 mt-5">
