--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 </head>
 
 <body>
+<div class="rain">
+    <div class="drop" style="left: 10%; animation-delay: 0s;"></div>
+    <div class="drop" style="left: 25%; animation-delay: 0.3s;"></div>
+    <div class="drop" style="left: 40%; animation-delay: 0.6s;"></div>
+    <div class="drop" style="left: 60%; animation-delay: 0.9s;"></div>
+    <div class="drop" style="left: 75%; animation-delay: 1.2s;"></div>
+    <div class="drop" style="left: 90%; animation-delay: 1.5s;"></div>
+  </div>
+  <div id="notification-bell" class="notification-bell">
+    🔔
+  </div>
+
+  <!-- Notification flag (initially hidden) -->
+  <div id="notification-flag" class="notification-flag" style="display: none;">
+    <span class="icon">ℹ️</span>
+    <span class="message">Important Information!</span>
+  </div>
+  
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
